# virtmcu

./: .dockerignore  .gitignore  .shellcheckrc  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DOCKER_IMAGE_MIGRATION_PLAN.md  FIRMWARESTUDIO_HANDOFF.md  Makefile  PLAN.md  README.md  ROADMAP_PHASE_12.md  VERSIONS  check_qmp.py  deny.toml  docker-bake-latest.hcl  docker-bake-release.hcl  docker-bake.hcl  inspect_mcp.py  patch.py  patch2.py  patch_plan.py  patch_wifi.sh  pyproject.toml  qmp_test.py  requirements.txt  test_cargo.sh  test_stm32f4.dtb.dts  test_two.py
.devcontainer/: devcontainer.json  initialize.sh  post-create.sh  post-start.sh
.github/: smoke-domains.json
.github/workflows/: ci-main.yml  ci-pr.yml  ci.yml  docker-publish.yml  release-binaries.yml
docker/: Dockerfile  docker-compose.yml
docs/: ADR-010-platform-description-format.md  ADR-011-zenoh-federation-bus.md  ADR-012-data-serialization.md  ARCHITECTURE.md  BUILD_ARCHITECTURE.md  CI_GUIDE.md  COMPLETED_PHASES.md  CONTAINER_DEV_GUIDE.md  MCP_DESIGN.md  MIGRATION_GUIDE.md  MIGRATION_OVERVIEW.md  MIGRATION_PLAN.md  OPENUSD_INTEGRATION.md  PHASE7_8_CRITIQUE.md  README.md  SUMMARY.md  TIME_MANAGEMENT.md  TIME_MANAGEMENT_DESIGN.md  TIMING_MODEL.md  TUTORIAL_16_PERFORMANCE.md  hardening-core.md
docs/architecture/: 00-introduction.md  02-temporal-core.md  03-transport-layer.md  04-communication-protocols.md  05-emulator-internals.md  06-peripheral-subsystem.md  09-determinism-and-chaos.md
docs/design/: ADR-006-binary-fidelity.md  ADR-011-zenoh-federation-bus.md  ADR-012-data-serialization.md  ARCHITECTURE.md  OPENUSD_INTEGRATION_DESIGN.md  (+2 more)
hw/: gen_trigger.sh  meson.build  meson.build.test
hw/dummy/: dummy.c
hw/misc/: mmio-socket-bridge.c  virtmcu-rust-ffi.c  virtmcu-rust-ffi.h  virtmcu_proto.h
hw/remote-port/: remote-port-bridge.c
hw/rust/: Cargo.toml  build.sh
hw/rust-dummy/: Cargo.toml  README.md  rust-dummy.c
hw/rust-dummy/src/: lib.rs
hw/rust/backbone/clock/src/: lib.rs
hw/rust/backbone/mmio-socket-bridge/src/: lib.rs
hw/rust/backbone/remote-port/src/: lib.rs
hw/rust/backbone/transport-zenoh/src/: lib.rs
hw/rust/common/virtmcu-qom/src/: sync.rs  telemetry.rs
hw/rust/comms/canfd/src/: lib.rs
hw/rust/comms/chardev/src/: lib.rs
hw/rust/comms/flexray/src/: lib.rs
hw/rust/comms/ieee802154/src/: lib.rs
hw/rust/comms/netdev/src/: lib.rs
hw/rust/comms/spi/src/: lib.rs
hw/rust/mcu/s32k144-lpuart/src/: lib.rs
hw/rust/mmio-socket-bridge/src/: lib.rs
hw/rust/observability/actuator/src/: lib.rs
hw/rust/observability/telemetry/src/: lib.rs
hw/rust/observability/ui/src/: lib.rs
hw/rust/remote-port/src/: lib.rs
hw/rust/rust-dummy/: Cargo.toml
hw/rust/rust-dummy/src/: lib.rs
hw/rust/s32k144-lpuart/src/: lib.rs
hw/rust/test-qom-device/src/: lib.rs
hw/rust/virtmcu-api/: Cargo.toml
hw/rust/virtmcu-api/src/: lib.rs  rf_generated.rs  telemetry_generated.rs  wifi_generated.rs
hw/rust/virtmcu-api/tests/: firmware_studio_mock.rs  fuzz_network.rs  stress_telemetry.rs  test_wifi_header.rs
hw/rust/virtmcu-qom/: Cargo.toml  build.rs  wrapper.h
hw/rust/virtmcu-qom/src/: chardev.rs  cpu.rs  error.rs  ffi.c  ffi.h  irq.rs  lib.rs  memory.rs  net.rs  qdev.rs  qom.rs  ssi.rs  sync.rs  sysemu.rs  timer.rs
hw/rust/virtmcu-qom/tests/: layout_validation.rs  type_registration.rs
hw/rust/virtmcu-test-devices/: Cargo.toml
hw/rust/virtmcu-test-devices/src/: lib.rs
hw/rust/virtmcu-zenoh/: Cargo.toml
hw/rust/virtmcu-zenoh/src/: lib.rs
hw/rust/zenoh-802154/: Cargo.toml
hw/rust/zenoh-802154/src/: lib.rs
hw/rust/zenoh-actuator/: Cargo.toml
hw/rust/zenoh-actuator/src/: lib.rs
hw/rust/zenoh-canfd/src/: lib.rs
hw/rust/zenoh-chardev/: Cargo.toml
hw/rust/zenoh-chardev/src/: lib.rs
hw/rust/zenoh-clock/: Cargo.toml
hw/rust/zenoh-clock/src/: lib.rs
hw/rust/zenoh-flexray/src/: lib.rs
hw/rust/zenoh-netdev/: Cargo.toml
hw/rust/zenoh-netdev/src/: lib.rs
hw/rust/zenoh-netdev/tests/: lib_tests.rs
hw/rust/zenoh-spi/src/: lib.rs
hw/rust/zenoh-telemetry/: Cargo.toml
hw/rust/zenoh-telemetry/src/: lib.rs  telemetry.rs  telemetry_generated.rs
hw/rust/zenoh-ui/: Cargo.toml
hw/rust/zenoh-ui/src/: lib.rs
hw/zenoh/: meson.build  zenoh-802154.c  zenoh-actuator.c  zenoh-chardev.c  zenoh-clock-rust.c  zenoh-clock.c  zenoh-netdev.c  zenoh-telemetry.c  zenoh-ui.c
patches/: apply_fdt_generic_util_fix.py  apply_libqemu.py  apply_rust_asan_fix.py  apply_zenoh_chardev.py  apply_zenoh_hook.py  apply_zenoh_netdev.py  apply_zenoh_qapi.py
scripts/: apply-qemu-patches.sh  check-ffi.py  check-versions.py  ci-integration-tier.sh  ci-phase.sh  cleanup-sim.sh  docker-build.sh  gen_vproto.py  get-free-port.py  lint_simulation_usage.py  perf_trend.py  probe-qemu.py  run.sh  setup-qemu.sh  sync-versions.py  test-plugins-load.py  verify-exports.py
tests/: conftest.py  spi_echo_node.py  test_actuator.py  test_analyze_coverage.py  test_binary_fidelity.robot  test_chardev_bql_stress.py  test_cli_generator.py  test_core_protocols.py  test_coverage_gap.py  test_device_realization.py  test_fake_adapter.py  test_fdt_emitter.py  test_flexray.py  test_interactive_echo.robot  test_multi_node_uart.robot  test_parser_fuzzing.py  test_phase10.py  test_phase10_stress.py  test_phase12.py  test_phase14.py  test_phase20_5.py  test_phase21_prereq.py  test_phase21_stress.py  test_phase25_lin.py  test_phase25_multi_node.py  test_phase25_stress.py  test_phase3.py  test_phase6_stress.py  test_phase7.py  test_phase8.py  test_phase8_uart_stress.py  test_qemu_library_pytest.py  test_qmp_failures.py  test_qmp_keywords.robot  test_qmp_stress.py  test_resd_interpolation.py  test_resd_malformed.py  test_riscv.py  test_runtime_image.sh  test_telemetry_fbs.py  (+8 more)
tools/: analyze_coverage.py  fake_adapter.py  proto_gen.py  qmp_probe.py  repl2yaml.py  telemetry_listener.py  usd_to_virtmcu.py  vproto.py  yaml2qemu.py
tools/systemc_adapter/: CMakeLists.txt  Makefile  main.cpp  test.dts
tools/zenoh_coordinator/: Cargo.toml
tools/zenoh_coordinator/src/: main.rs
tutorial/: README.md
worlds/: pendulum.yml
(+311 files in other folders)
